--- a/scb-ui-zk/src/main/webapp/pages/common/component/course-description.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/component/course-description.zul
@@ -5,11 +5,10 @@
    		<label value="${c:l('txt.ui.common.CourseDeciption')}" style="margin-left: 5px;"/>
    		<textbox multiline="true" 
    			readonly="true"
-   			hflex="1"
-   			style="margin: 5px;"
+   			width="100%"
    			rows="16" 
    			value="${course.description}" />
-   		<hlayout style="margin-top: 5px;">
+   		<hlayout width="100%">
    			<vlayout hflex="1">
 	    		<label value="${c:l('txt.ui.common.priceSemester1')}" style="margin-left: 5px;"/>
 	    		<hlayout>
