--- a/scb-ui-zk/src/main/webapp/pages/public/zapomenute-heslo.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/zapomenute-heslo.zul
@@ -5,28 +5,19 @@
 <?taglib uri="http://www.zkoss.org/dsp/web/core" prefix="c" ?>
 
 <zk>
-	<borderlayout self="@{define(mainContent)}" hflex="1"
-		viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.security.vm.ForgottenPasswordVM')"
-		validationMessages="@id('vmsgs')"
-	    form="@id('fx') @load(vm) @save(vm, before='submit')" >
-		<center border="none" style="background:#dfe8f6 url('${pageContext.request.contextPath}/resources/img/background2014Full.jpg') no-repeat center center;" >
-			<div>
-				<hlayout spacing="0">
-					<vbox hflex="1" />
-					
-					<vbox hflex="20" pack="center" align="center" >
-						<hbox hflex="1" pack="center" >
-							<vbox >
-								<headline label="${c:l('txt.ui.forgottenPassword')}" />
-							</vbox>
-						</hbox>
-					</vbox>
-					
-					<vbox hflex="1" />
-				</hlayout>
-			
-				<hlayout xmlns:h="xhtml" >
-					<vbox hflex="1" />
+
+	<div self="@{define(mainContent)}" 
+			hflex="1" 
+			sclass="scb-view scb-view-900" 
+			viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.security.vm.ForgottenPasswordVM')"
+			validationMessages="@id('vmsgs')"
+		    form="@id('fx') @load(vm) @save(vm, before='submit')" >
+		
+		<vlayout>
+            <label value="${c:l('txt.ui.forgottenPassword')}" sclass="scb-headline-big"/>
+        </vlayout>
+
+				<vlayout xmlns:h="xhtml" >
 					
 					<!-- Potvrzujici info -->
 					<vbox hflex="20" pack="center" align="center" sclass="vbox-content" visible="@load(vm.showNotification)">
@@ -37,13 +28,13 @@
 						</window>
 					</vbox>
 					
-					<vbox hflex="20" pack="center" visible="@load(!vm.showNotification)" align="center" >
-						<div style="margin-bottom: 10px;"/>
+					<vlayout visible="@load(!vm.showNotification)" sclass="scb-panel">
 						
-						<grid hflex="1" sclass="form-grid" style="margin-top: 20px;margin-bottom: 20px;" >
+						<grid hflex="1" style="margin-bottom: 20px;" >
 							<columns>
 				                <column align="center" hflex="1" />
 				            </columns>
+				            
 							<rows style="background: white;">
 								<row sclass="form-grid-row" style="border: none; padding: 20px 30px 15px 30px;" >
 									<cell sclass="form-grid-cell" >
@@ -75,25 +66,14 @@
 								</row>
 							</rows>
 						</grid>
-						
-						<hbox style="margin-bottom: 20px;">
-							<vbox>
-								<button label="Odeslat" tabindex="21"
-									onClick="@command('submit')" 
-									iconSclass="z-icon-check"  />
-							</vbox>
-						</hbox>
-						
-					</vbox>
+					</vlayout>
 					
-					<vbox hflex="1" />
+					<button label="Odeslat"
+							onClick="@command('submit')" 
+							iconSclass="z-icon-check" 
+							style="margin-top: 30px;"
+							sclass="btn-success"/>
 					
-				</hlayout>
+				</vlayout>
 			</div>
-		</center>
-		<south border="none" >
-			<include src="/pages/common/template/footer.zul"/>
-		</south>
-	</borderlayout>
-	
 </zk>
