--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
@@ -4,36 +4,22 @@
 <?component name="validMsg" macroURI="/pages/common/component/validMsg.zul"?>
 
 <zk>
-	<div self="@{define(mainContent)}" hflex="1" >
+	<div self="@{define(mainContent)}" 
+			hflex="1" 
+			vflex="1"
+			sclass="scb-view" 
+			viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseparticipant.vm.CourseParticipantListVM')" 
+			validationMessages="@id('vmsgs')"
+    		form="@id('fx') @load(vm.newCourseParticipant) @save(vm.newCourseParticipant, before='submit')" >
 		
-		<div sclass="breadcrumb" visible="false">
-			<span sclass="home-icon z-icon-home"/>
-	    	<a label="${c:l('txt.ui.menu.dashboard')}" href="/"/>
-			<label value="${c:l('txt.ui.menu.application')}"/>
-		</div>
+		<vlayout>
+            <label value="${c:l('txt.ui.common.participants')}" sclass="scb-headline-big"/>
+        </vlayout>
 		
-		<hlayout spacing="0" visible="false">
-			<vbox hflex="1" />
-			
-			<vbox hflex="20" pack="center">
-				<headline label="${c:l('txt.ui.common.participants')}" menuSelected="menu_userCourseParticipantList" />
-			</vbox>
-			
-			<vbox hflex="1" />
-		</hlayout>
-		
-		<hlayout spacing="0">
-		
-			<vbox hflex="1" />
-			
-			<vbox hflex="20" pack="center" viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseparticipant.vm.CourseParticipantListVM')" 
-				validationMessages="@id('vmsgs')"
-	    		form="@id('fx') @load(vm.newCourseParticipant) @save(vm.newCourseParticipant, before='submit')" >
-				
+		<vlayout spacing="0">
 				<listbox model="@load(vm.courseParticipantList)"
 					id="courseParticipantList"
 					hflex="1"
-					style="margin-top: 20px;"
 					mold="paging"
 					pageSize="10"
 					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
@@ -43,13 +29,11 @@
 			            	<hbox hflex="1" height="42px" align="center" >
 				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 			            			<hbox vflex="1" align="center">
-			            				<label value="${c:l('txt.ui.common.participants')}" /> 
 			            				<button label="${c:l('txt.ui.common.newCourseParticipant')}" 
 			            					tooltiptext="@load(vm.newCourseParticipantButtonText)"
 			            					popup="newParticipantPopup" 
 			            					sclass="btn-warning" 
 			            					iconSclass="z-icon-plus"
-			            					style="margin-left: 5px;"
 			            					visible="@load(vm.courseApplicationAllowed)" />
 			            			</hbox>
 			            		</vbox>
@@ -325,11 +309,7 @@
 				        });
 				    </script>
 				</popup>
-			    
-			</vbox>
 			
-			<vbox hflex="1" />
-			
-		</hlayout>
+		</vlayout>
 	</div>
 </zk>
