--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/uzivatel.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/uzivatel.zul
@@ -6,172 +6,158 @@
 <?component name="validMsg" macroURI="/pages/common/component/validMsg.zul"?>
 
 <zk>
-	<borderlayout self="@{define(mainContent)}" hflex="1" >
-		<center border="none" autoscroll="true" >
-			<div viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.user.vm.UserRepresentativeVM')"
-				validationMessages="@id('vmsgs')"
-			    form="@id('fx') @load(vm) @save(vm, before='submit')">
-				<hlayout spacing="0">
-					<vbox hflex="1" />
-					
-					<vbox hflex="20" pack="center" align="center" >
-						<hbox hflex="1" pack="end" align="center" >
-							<vbox hflex="1" align="center" >
-								<headline label="${c:l('txt.ui.common.userParticipantData')}" menuSelected="menu_participantRepresentative" />
-							</vbox>
-						</hbox>
-					</vbox>
-					
-					<vbox hflex="1" />
-				</hlayout>
+	<div self="@{define(mainContent)}" 
+			hflex="1" 
+			sclass="scb-view scb-view-900" 
+			viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.user.vm.UserRepresentativeVM')"
+			validationMessages="@id('vmsgs')"
+		    form="@id('fx') @load(vm) @save(vm, before='submit')" >
+
+		<vlayout>
+            <label value="${c:l('txt.ui.common.userParticipantData')}" sclass="scb-headline-big"/>
+        </vlayout>
 				
-				<hlayout spacing="0">
-				
-					<vbox hflex="1" />
+		<vlayout sclass="scb-panel" style="padding: 10px 0px;">
+
+			<!-- Formular -->
+				<grid hflex="1" >
+					<columns>
+		                <column align="center" hflex="1" />
+		            </columns>
+		            
+					<rows style="background: white;">
+						<row>
+							<cell >
+								<vbox hflex="1">
+									<label value="${c:l('txt.ui.common.email')} / ${c:l('txt.ui.common.Username')}"/>
+									<label value="" />
+									<hbox hflex="1">
+										<textbox id="representativeEmail1"
+											value="@bind(fx.user.contact.email1) @validator(vm.emailValidator, notNull=true)"
+											maxlength="@load(vm.getEmailMaxlength())"
+											placeholder="*"
+											sclass="form-input-text"
+											focus="true"
+											tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+											onChange="@command('validateUniqueUsernameCmd', email=self.value, fx=fx)"
+											tabindex="1"
+											hflex="1" />
+									</hbox>
+									<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeEmail1])" >
+											<label value="@bind(vmsgs[representativeEmail1])" />
+										</span>	
+									</hbox>
+								</vbox>
+							</cell>
+						</row>
+						
+						<row>
+							<cell >
+								<vbox hflex="1">
+									<label value="${c:l('txt.ui.common.firstname')}"/>
+									<textbox id="representativeFirstname"
+										value="@bind(fx.user.contact.firstname) @validator(vm.notNullValidator)" 
+										maxlength="@load(vm.getFirstnameMaxlength())"
+										placeholder="*"
+										sclass="form-input-text"
+										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+										tabindex="2"
+										hflex="1" />
+									<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeFirstname])" >
+											<label value="@bind(vmsgs[representativeFirstname])" />
+										</span>
+									</hbox>
+								</vbox>
+							</cell>
+						</row>
+						
+						<row>
+							<cell >
+								<vbox hflex="1">
+									<label value="${c:l('txt.ui.common.surname')}"/>
+									<textbox id="representativeSurname" 
+										value="@bind(fx.user.contact.surname) @validator(vm.notNullValidator)"
+										maxlength="@load(vm.getSurnameMaxlength())"
+										placeholder="*"
+										sclass="form-input-text"
+										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+										tabindex="3"
+										hflex="1" />
+									<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeSurname])" >
+											<label value="@bind(vmsgs[representativeSurname])" />
+										</span>
+									</hbox>
+								</vbox>
+							</cell>
+						</row>
+						
+						<row>
+							<cell>
+								<vbox hflex="1">
+									<label value="${c:l('txt.ui.common.phone')} 1"/>
+									<textbox id="representativePhone1" 
+										value="@bind(fx.user.contact.phone1) @validator(vm.notNullValidator)"
+										maxlength="@load(vm.getPhoneMaxlength())"
+										placeholder="*"
+										sclass="form-input-text"
+										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+										tabindex="4"
+										hflex="1" />
+									<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativePhone1])" >
+											<label value="@bind(vmsgs[representativePhone1])" />
+										</span>
+									</hbox>
+								</vbox>
+							</cell>
+						</row>
+						
+						<row>
+							<cell>
+								<vbox hflex="1">
+									<label value="${c:l('txt.ui.common.phone')} 2:"/>
+									<textbox id="representativePhone2"
+										value="@bind(fx.user.contact.phone2)"
+										maxlength="@load(vm.getPhoneMaxlength())"
+										sclass="form-input-text"
+										tabindex="5"
+										hflex="1" />
+									<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+										
+									</hbox>
+								</vbox>
+							</cell>
+						</row>
+						
+						<row>
+							<cell>
+								<vbox hflex="1">
+									<label value="${c:l('txt.ui.common.email')} 2"/>
+									<textbox id="representativeEmail2"
+										value="@bind(fx.user.contact.email2) @validator(vm.emailValidator)"
+										maxlength="@load(vm.getEmailMaxlength())"
+										sclass="form-input-text"
+										tabindex="6"
+										hflex="1" />
+									<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeEmail2])" >
+											<label value="@bind(vmsgs[representativeEmail2])" />
+										</span>
+									</hbox>
+								</vbox>
+							</cell>
+						</row>
+					</rows>
+				</grid>
+		</vlayout>
 		
-					<!-- Formular -->
-					<vbox hflex="20" pack="center" align="center" sclass="vbox-content" >	    						
-						
-						<grid hflex="1" sclass="form-grid" style="margin-top: 20px;margin-bottom: 20px;" >
-							<columns>
-				                <column align="center" hflex="1" />
-				            </columns>
-							<rows style="background: white;">
-								<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
-									<cell sclass="form-grid-cell" >
-										<vbox hflex="1">
-											<label value="${c:l('txt.ui.common.email')} / ${c:l('txt.ui.common.Username')}"/>
-											<label value="" />
-											<hbox hflex="1">
-												<textbox id="representativeEmail1"
-													value="@bind(fx.user.contact.email1) @validator(vm.emailValidator, notNull=true)"
-													maxlength="@load(vm.getEmailMaxlength())"
-													placeholder="*"
-													sclass="form-input-text"
-													focus="true"
-													tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-													onChange="@command('validateUniqueUsernameCmd', email=self.value, fx=fx)"
-													tabindex="1"
-													hflex="1" />
-											</hbox>
-											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeEmail1])" >
-													<label value="@bind(vmsgs[representativeEmail1])" />
-												</span>	
-											</hbox>
-										</vbox>
-									</cell>
-								</row>
-								
-								<row sclass="form-grid-row" style="border: none; padding: 0px 10px 10px 30px;" >
-									<cell sclass="form-grid-cell" >
-										<vbox hflex="1">
-											<label value="${c:l('txt.ui.common.firstname')}"/>
-											<textbox id="representativeFirstname"
-												value="@bind(fx.user.contact.firstname) @validator(vm.notNullValidator)" 
-												maxlength="@load(vm.getFirstnameMaxlength())"
-												placeholder="*"
-												sclass="form-input-text"
-												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="2"
-												hflex="1" />
-											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeFirstname])" >
-													<label value="@bind(vmsgs[representativeFirstname])" />
-												</span>
-											</hbox>
-										</vbox>
-									</cell>
-								</row>
-								
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
-									<cell sclass="form-grid-cell" >
-										<vbox hflex="1">
-											<label value="${c:l('txt.ui.common.surname')}"/>
-											<textbox id="representativeSurname" 
-												value="@bind(fx.user.contact.surname) @validator(vm.notNullValidator)"
-												maxlength="@load(vm.getSurnameMaxlength())"
-												placeholder="*"
-												sclass="form-input-text"
-												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="3"
-												hflex="1" />
-											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeSurname])" >
-													<label value="@bind(vmsgs[representativeSurname])" />
-												</span>
-											</hbox>
-										</vbox>
-									</cell>
-								</row>
-								
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
-									<cell sclass="form-grid-cell" >
-										<vbox hflex="1">
-											<label value="${c:l('txt.ui.common.phone')} 1"/>
-											<textbox id="representativePhone1" 
-												value="@bind(fx.user.contact.phone1) @validator(vm.notNullValidator)"
-												maxlength="@load(vm.getPhoneMaxlength())"
-												placeholder="*"
-												sclass="form-input-text"
-												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="4"
-												hflex="1" />
-											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativePhone1])" >
-													<label value="@bind(vmsgs[representativePhone1])" />
-												</span>
-											</hbox>
-										</vbox>
-									</cell>
-								</row>
-								
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
-									<cell sclass="form-grid-cell" >
-										<vbox hflex="1">
-											<label value="${c:l('txt.ui.common.phone')} 2:"/>
-											<textbox id="representativePhone2"
-												value="@bind(fx.user.contact.phone2)"
-												maxlength="@load(vm.getPhoneMaxlength())"
-												sclass="form-input-text"
-												tabindex="5"
-												hflex="1" />
-											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-												
-											</hbox>
-										</vbox>
-									</cell>
-								</row>
-								
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 30px 30px;" >
-									<cell sclass="form-grid-cell" >
-										<vbox hflex="1">
-											<label value="${c:l('txt.ui.common.email')} 2"/>
-											<textbox id="representativeEmail2"
-												value="@bind(fx.user.contact.email2) @validator(vm.emailValidator)"
-												maxlength="@load(vm.getEmailMaxlength())"
-												sclass="form-input-text"
-												tabindex="6"
-												hflex="1" />
-											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeEmail2])" >
-													<label value="@bind(vmsgs[representativeEmail2])" />
-												</span>
-											</hbox>
-										</vbox>
-									</cell>
-								</row>
-							</rows>
-						</grid>
-						
-						<button label="Uložit"
-							onClick="@command('submit')" 
-							iconSclass="z-icon-check" 
-							style="margin-bottom:20px;" />
-						
-					</vbox>
-				</hlayout>
-			</div>
-		</center>
-	</borderlayout>
+		<button label="Uložit"
+					onClick="@command('submit')" 
+					iconSclass="z-icon-check" 
+					style="margin-top:30px;" 
+					sclass="btn-success"/>
+	</div>
 </zk>
