--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-prihlasek.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-prihlasek.zul
@@ -132,18 +132,9 @@
 						                	
 						                	<popup id="contactPopup_${each.uuid}" width="400px">
 										    	<vbox style="margin: 5px;">
-										    		<grid hflex="min" vflex="min">
-														<auxhead>
-															<auxheader class="header" colspan="2" >
-																<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-																	<label value="${c:l('txt.ui.common.contact')}" />
-																</vbox>
-															</auxheader>
-														</auxhead>
-														<columns>
-															<column />
-															<column align="left"/>
-														</columns>
+										    		
+										    		<label value="${c:l('txt.ui.common.contact')}" width="100%" sclass="sp-popup-headline"/>
+										    		<grid width="100%">
 														<rows>
 															<row>
 																<label value="${c:l('txt.ui.common.phone')}"/>
@@ -170,7 +161,7 @@
                 			<listcell visible="${each.currentParticipant}" />
                 			
 			                <listcell>
-			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourseApplication_${each.uuid}, position=after_end" />
+			                	<button iconSclass="z-icon-ellipsis-h" popup="menuCourseApplication_${each.uuid}, position=after_end" />
 			                	<menupopup id="menuCourseApplication_${each.uuid}" >
 									<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" />
 									<menuitem label="Odstranit" disabled="${each.courseParticipant.inCourse()}" onClick="@command('deleteCmd', item=each)"  />
