--- a/scb-ui-zk/src/main/webapp/pages/secured/change-password-window.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/change-password-window.zul
@@ -17,7 +17,7 @@
     	validationMessages="@id('vmsgs')"
 	    form="@id('fx') @load(vm) @save(vm, before='submitCmd')" >
     	<hbox hflex="1">
-    		<a iconSclass="z-icon-info-circle" popup="passwordQualityPopup" style="margin-left: 5px; font-size: large;" />
+    		<a iconSclass="z-icon-info-circle big-icon" popup="passwordQualityPopup" style="margin-left: 5px; font-size: large;" />
     		<popup id="passwordQualityPopup" width="225px" style="padding: 5px 10px 5px 10px;">
     			<vbox>
 		        	<label value="${c:l('txt.ui.common.passwordKvality')}" style="font-weight: bold;" />
