--- a/scb-ui-zk/src/main/webapp/pages/public/zapomenute-heslo.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/zapomenute-heslo.zul
@@ -51,7 +51,7 @@
 													tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 													tabindex="1"
 													hflex="1" />
-												<a iconSclass="z-icon-info-circle" popup="emailPopup" style="margin-left: 5px; font-size: large;" />
+												<a iconSclass="z-icon-info-circle big-icon" popup="emailPopup" style="margin-left: 5px; font-size: large;" />
 												<popup id="emailPopup" >
 											        <label value="${c:l('txt.ui.common.email.info')}" />
 											    </popup>
