--- a/scb-ui-zk/src/main/webapp/resources/css/styles.css
+++ b/scb-ui-zk/src/main/webapp/resources/css/styles.css
@@ -85,9 +85,11 @@ body{
 	line-height: 46px;
 	padding: 0;
 	font-size: 14px;
+	font-weight:bold;
 	color: #23282c;
 	/*font-family: 'Roboto', sans-serif !important;*/
-	font-family: -apple-system, system-ui,B linkMacSystemFont, "Segoe UI", Roboto," Helvetica Neue", Arial,s ans-serif !important;
+	/*font-family: -apple-system, system-ui,B linkMacSystemFont, "Segoe UI", Roboto," Helvetica Neue", Arial,s ans-serif !important;*/
+	font-family: 'Open Sans', sans-serif;
 }
 
 .z-groupbox .z-groupbox-content{
